Updated the CSS and HTML file a bit to make it more readable

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 <body>
     <div class="game-window">
         <span class="info">
-            <div class="exercise-number">Fråga nummer: 1/30</div>
-            <div class="result">Resutlat: 0</div>
-            <div class="timer-div">&#x1f552: <span class="timer">20</span></div>
+            <div class="exercise-number text-center">Fråga nummer: 1/30</div>
+            <div class="result text-center">Resutlat: 0</div>
+            <div class="timer-div text-center">&#x1f552: <span class="timer">20</span></div>
         </span>
-        <span class="game-set">
+        <span class="game-set text-center">
             <div id="startgame">STARTA SPEL</div>
             <div id="resetgame">Börja om</div>
         </span>
         <hr>
-        <div class="megaphone">Lyssna igen &#x1F4E3</div>
+        <div class="megaphone text-center">Lyssna igen &#x1F4E3</div>
         <div class="words-wrapper">
             <div class="words-div">
-                <span id="word1" class="word">Apa</span>
-                <span id="word2" class="word">Banan</span>
-                <span id="word3" class="word">Citron</span>
+                <span id="word1" class="word text-center">Apa</span>
+                <span id="word2" class="word text-center">Banan</span>
+                <span id="word3" class="word text-center">Citron</span>
             </div>
             <div class="words-div">
-                <span id="word4" class="word">Disco</span>
-                <span id="word5" class="word">Elefant</span>
-                <span id="word6" class="word">Groda</span>
+                <span id="word4" class="word text-center">Disco</span>
+                <span id="word5" class="word text-center">Elefant</span>
+                <span id="word6" class="word text-center">Groda</span>
             </div>
         </div>
     </div>
