updated the CSS and HTML with more Readable CSS and classes

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <div class="timer-div text-center">&#x1f552: <span class="timer">20</span></div>
         </span>
         <span class="game-set text-center">
-            <div id="startgame">STARTA SPEL</div>
-            <div id="resetgame">Börja om</div>
+            <div id="startgame border-rounded">STARTA SPEL</div>
+            <div id="resetgame border-rounded">Börja om</div>
         </span>
         <hr>
-        <div class="megaphone text-center">Lyssna igen &#x1F4E3</div>
+        <div class="megaphone border-rounded text-center">Lyssna igen &#x1F4E3</div>
         <div class="words-wrapper">
             <div class="words-div">
-                <span id="word1" class="word text-center">Apa</span>
-                <span id="word2" class="word text-center">Banan</span>
-                <span id="word3" class="word text-center">Citron</span>
+                <span id="word1" class="word border-rounded text-center">Apa</span>
+                <span id="word2" class="word border-rounded text-center">Banan</span>
+                <span id="word3" class="word border-rounded text-center">Citron</span>
             </div>
             <div class="words-div">
-                <span id="word4" class="word text-center">Disco</span>
-                <span id="word5" class="word text-center">Elefant</span>
-                <span id="word6" class="word text-center">Groda</span>
+                <span id="word4" class="word border-rounded text-center">Disco</span>
+                <span id="word5" class="word border-rounded text-center">Elefant</span>
+                <span id="word6" class="word border-rounded text-center">Groda</span>
             </div>
         </div>
     </div>
