Fixed a Class being in an ID field

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div class="timer-div text-center">&#x1f552: <span class="timer">20</span></div>
         </span>
         <span class="game-set text-center">
-            <div id="startgame border-rounded">STARTA SPEL</div>
-            <div id="resetgame border-rounded">Börja om</div>
+            <div id="startgame" class="border-rounded">STARTA SPEL</div>
+            <div id="resetgame" class="border-rounded">Börja om</div>
         </span>
         <hr>
         <div class="megaphone border-rounded text-center">Lyssna igen &#x1F4E3</div>
