Added timer, does not work localy for some reason

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>ABC och ORD</title>
     <link rel="stylesheet" href="./style/default.css">
-    <script src="./scripts/app.js"></script>
+
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <span class="info">
             <div class="exercise-number text-center">Fråga nummer: 1/30</div>
             <div class="result text-center">Resutlat: 0</div>
-            <div class="timer-div text-center">&#x1f552: <span class="timer">20</span></div>
+            <div class="timer-div text-center">&#x1f552: <span id="timer" class="timer">20</span></div>
         </span>
         <span class="game-set text-center">
             <div id="startgame" class="border-rounded">STARTA SPEL</div>
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+    <script src="./scripts/app.js"></script>
 </body>
 
 </html>
